--- a/app.css
+++ b/app.css
@@ -27,7 +27,6 @@ body {
 	padding-left: 10px;
 	width: 88%;
 	margin-top: 25px;
-	padding-top: 25px;
 	background-color: #E6E6E6;
 
 }
@@ -37,6 +36,7 @@ body {
 	text-decoration: none;
 	color: #FFFFFF;
 	margin-top: 25px;
+	margin-bottom: 10px;
 }
 
 .project-container .column {
@@ -64,8 +64,8 @@ body {
 }
 
 .project-container .project-header {
-	padding-top: 20px;
-	padding-bottom: 0px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	margin-top: 10px;
 	text-align: center;
 	height: auto;
@@ -73,14 +73,14 @@ body {
 	border-bottom : 2px solid rgba(100, 100, 100, .4);
 }
 
-.project-container:before,
-.project-header:after {
+.project-container h1::after {
 	content: " ";
-	width: 500px;
-	height: 2px;
-	color: #292929;
-	padding: 10px;
-	margin: 10px;
+	width: 70%;
+	margin-right: auto;
+	margin-left: auto;
+	height: 1px;
+	margin-top: 10px;
+	background-color: rgba(100, 100, 100, .4);
 	display: block;
 }
 
@@ -91,14 +91,16 @@ body {
 }
 
 .jumbotron {
-	background: #292929 no-repeat center center fixed;
+	background: url(images/header.jpg) no-repeat center center fixed;
   width: 100%;
-	height: 300px;
+	height: auto;
   font-family: 'Lato', sans-serif;
-	color: #292929;
   text-align: center;
-	padding: 25px;
 	margin-bottom: 25px;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 .jumbotron .logo-header {
@@ -107,7 +109,6 @@ body {
 	margin-left: auto;
 	padding-top: 25px;
 	padding-bottom: 40px;
-	background-color: rgba(80, 80, 80, .2);
 }
 
 .logo-header img {
@@ -355,7 +356,7 @@ body {
 		width: 100%;
 		display: block;
 	}
-	.project-container .content {
-		float: left;
+	.project-container .content{
+		display: inline;
 	}
 }
