--- a/app.css
+++ b/app.css
@@ -6,7 +6,13 @@
 
 body {
 	font-family: 'Lato', sans-serif;
-	background-color: #f6f9f9;
+	background: #466368;
+  background: radial-gradient(#00CC99, #293f50);
+}
+
+h1, h2, h3, h4, h5 {
+	font-family: 'Lato', sans-serif;
+	font-weight: 100;
 }
 /* General grid styles */
 .grid {
@@ -20,78 +26,8 @@ body {
 	height: auto;
 }
 
-.project-container {
-	margin-right: auto;
-	margin-left: auto;
-	padding-right: 10px;
-	padding-left: 10px;
-	width: 88%;
-	margin-top: 25px;
-	background-color: #E6E6E6;
-
-}
-
-.project-container h1 > a {
-	text-align:center;
-	text-decoration: none;
-	color: #FFFFFF;
-	margin-top: 25px;
-	margin-bottom: 10px;
-}
-
-.project-container .column {
-	margin-left: 10px;
-	margin-right: 10px;
-	margin-top: 0px;
-	margin-bottom: 0px;
-	width: 48%;
-	height: auto;
-	float: left;
-}
-
-.project-container .content {
-	padding: 25px;
-	margin: 5px;
-	width: 90%;
-	float: left;
-	background-color: #E6E6E6;
-	border-bottom : 2px solid rgba(100, 100, 100, .4);
-}
-
-.project-container img {
-	width: 100%;
-	height: auto;
-}
-
-.project-container .project-header {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	margin-top: 10px;
-	text-align: center;
-	height: auto;
-	width: 100%;
-	border-bottom : 2px solid rgba(100, 100, 100, .4);
-}
-
-.project-container h1::after {
-	content: " ";
-	width: 70%;
-	margin-right: auto;
-	margin-left: auto;
-	height: 1px;
-	margin-top: 10px;
-	background-color: rgba(100, 100, 100, .4);
-	display: block;
-}
-
-.container {
-  font-family: 'Lato', sans-serif;
-  text-align: center;
-	width: 100%;
-}
-
 .jumbotron {
-	background: url(images/header.jpg) no-repeat center center fixed;
+	background-color: rgba(20, 20, 20, .3);
   width: 100%;
 	height: auto;
   font-family: 'Lato', sans-serif;
@@ -115,15 +51,6 @@ body {
 	width: 50%;
 	height: auto;
 	margin: auto;
-}
-
-.jumbotron .name:before {
-	content: '';
-	position: relative;
-	background: #FFFFFF;
-	width: 200px;
-	height: 3px;
-	top: 70px;
 }
 
 .jumbotron > div.content {
@@ -151,24 +78,29 @@ body {
 
 /* grid item */
 
-.grid #puppy-play-date {
+/*.grid #puppy-play-date {
 	background: url(images/PuppyPlaydateco_BW.jpg) no-repeat center center;
+	opacity: .5;
 }
 
 .grid #march-madness {
 	background: url(images/EmptyCourt_BW.jpg) no-repeat center center;
+	opacity: .5;
 }
 
 .grid #fellow-tracker {
 	background: url(images/FellowTrackerPenNotebook_BW.jpg) no-repeat center center;
-}
+	opacity: .5;
+
+}*/
 
 .grid li {
 	width: 33%;
 	float: left;
-	height: 420px;
+	height: 200px;
 	text-align: center;
 	border-top: 1px solid #FFFFFF;
+	background-color: rgba(20, 20, 20, .3)
 }
 
 /* we are using a combination of borders and box shadows to control the grid lines */
@@ -300,6 +232,72 @@ body {
 	color: #F9F9F9;
 }
 
+.container {
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+	width: 100%;
+}
+
+.project-container {
+	margin-right: auto;
+	margin-left: auto;
+	padding-right: 10px;
+	padding-left: 10px;
+	width: 88%;
+	margin-top: 25px;
+}
+
+.project-container a {
+	text-align:center;
+	text-decoration: none;
+	color: #FFFF66;
+	display: block;
+	margin-top: 25px;
+	margin-bottom: 10px;
+}
+
+.project-container .column {
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	width: 48%;
+	height: auto;
+	float: left;
+}
+
+.project-container .content {
+	padding: 25px;
+	margin: 5px;
+	width: 90%;
+	float: left;
+	color: #e6e6e6;
+	background-color: rgba(20, 20, 20, .4);
+}
+
+.project-container h1 {
+	color: #FFFF66;
+}
+
+.project-header p {
+	color: #292929;
+}
+
+.project-container img {
+	width: 100%;
+	height: auto;
+}
+
+.project-container .project-header {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin-top: 10px;
+	text-align: center;
+	height: auto;
+	width: 100%;
+	background-color: rgba(20, 20, 20, .3);
+	border-bottom : 2px solid rgba(100, 100, 100, .4);
+}
 
 @media screen and (max-width: 62.75em) {
 	.grid li {
